@@ -1,3 +1,2 @@
 @echo off
-if not exist ..\ow\NUL mkdir ..\ow
-jwasm -mz -Fo..\ow\ ICHAC97.ASM
+jwasm -nologo -mz -Fl ICHAC97.ASM
