@@ -1,2 +1,2 @@
 @echo off
-jwasm -nologo -mz -Sg -Fl=..\ow\ -Fo=..\ow\PCIIRQ.EXE PCIIRQ.ASM
+jwasm -nologo -mz -Fl PCIIRQ.ASM
